******* Elgg News Plugin *******

CHANGE LOG
2.0.5
--------------------- 
- fix: set featured/unfeatured is allow only to entity owner or admins
- fix: composer file

2.0.4	(June 2016)
--------------------- 
- Added compatibility with Elgg 2.0
- Added option to set a news item as featured
- Added a featured news widget 
- Added option to upload photos on news item
- News posts are now likeable 
- Plugin now can be installed via composer
- Several code improvements

1.11.3	(May 2015)
--------------------- 
- Added option to determine users who can post news/announcements (thanks to Pasley70 for contribution)
- Added group widget
- Small bugs fixes

1.8.2	(Dec 2014)
--------------------- 
- Small bugs fixes

1.8.1	(Nov 2014)
--------------------- 
- Added option for group owners to post announcements inside group only
- Small bugs fixes

1.8.0	(15 Nov 2014)
--------------------- 
Initial release 





