@@ -3,6 +3,7 @@
 CHANGE LOG
 2.0.5
 --------------------- 
+- added: option to show news photos on walled garden sites
 - fix: set featured/unfeatured is allow only to entity owner or admins
 - fix: composer file
 
